
See <<batch-listeners>> for more information.

The `DefaultAfterRollbackProcessor` and `SeekToCurrentErrorHandler` can now recover (skip) records that keep failing, and will do so after 10 failures, by default.
They can be configured to publish failed records to a dead-letter topic.

See <<after-rollback>>, <<seek-to-current>> and <<dead-letters>> for more information.

The `ConsumerStoppingEvent` has been added.
See <<events>> for more information.

==== @KafkaListener Changes

You can now override the `concurrency` and `autoStartup` properties of the listener container factory by setting properties on the annotation.
You can now add configuration to determine which headers (if any) are copied to a reply message.

See <<kafka-listener-annotation>> for more information.

You can now use `@KafkaListener` as a meta-annotation on your own annotations.

See <<kafka-listener-meta>> for more information.

It is now easier to configure a `Validator` for `@Payload` validation.
See <<kafka-validation>> for more information.

==== Header Mapping Changes

Headers of type `MimeType` and `MediaType` are now mapped as simple strings in the `RecordHeader` value.
Previously, they were mapped as JSON and only `MimeType` was decoded, `MediaType` could not be decoded.
They are now simple strings for interoperability.

Also, the `DefaultKafkaHeaderMapper` has a new method `addToStringClasses` allowing the specification of types that should be mapped using `toString()` instead of JSON.

See <<headers>> for more information.

==== Embedded Kafka Changes

The `KafkaEmbedded` class and its `KafkaRule` interface have need deprecated in favor of the `EmbeddedKafkaBroker` and its JUnit 4 `EmbeddedKafkaRule` wrapper.
The `@EmbeddedKafka` annotation now populates an `EmbeddedKafkaBroker` bean instead of the deprecated `KafkaEmbedded`.
This allows the use of `@EmbeddedKafka` in JUnit 5 tests.