@@ -1,5 +1,5 @@
 /*
- * Copyright 2016 the original author or authors.
+ * Copyright 2016-2019 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -17,6 +17,7 @@
 package org.springframework.kafka;
 
 import org.springframework.core.NestedRuntimeException;
+import org.springframework.lang.Nullable;
 
 /**
  * The Spring Kafka specific {@link NestedRuntimeException} implementation.
@@ -31,7 +32,7 @@ public class KafkaException extends NestedRuntimeException {
 		super(message);
 	}
 
-	public KafkaException(String message, Throwable cause) {
+	public KafkaException(String message, @Nullable Throwable cause) {
 		super(message, cause);
 	}
 
