@@ -1,5 +1,5 @@
 /*
- * Copyright 2016 the original author or authors.
+ * Copyright 2016-2019 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -17,6 +17,7 @@
 package org.springframework.kafka.listener;
 
 import org.springframework.kafka.KafkaException;
+import org.springframework.lang.Nullable;
 
 /**
  * The listener specific {@link KafkaException} extension.
@@ -26,12 +27,46 @@ import org.springframework.kafka.KafkaException;
 @SuppressWarnings("serial")
 public class ListenerExecutionFailedException extends KafkaException {
 
+	private final String groupId;
+
+	/**
+	 * Construct an instance with the provided properties.
+	 * @param message the exception message.
+	 */
 	public ListenerExecutionFailedException(String message) {
-		super(message);
+		this(message, null, null);
 	}
 
-	public ListenerExecutionFailedException(String message, Throwable cause) {
+	/**
+	 * Construct an instance with the provided properties.
+	 * @param message the exception message.
+	 * @param cause the cause.
+	 */
+	public ListenerExecutionFailedException(String message, @Nullable Throwable cause) {
+		this(message, null, cause);
+	}
+
+	/**
+	 * Construct an instance with the provided properties.
+	 * @param message the exception message.
+	 * @param groupId the container's group.id property.
+	 * @param cause the cause.
+	 * @since 2.2.4
+	 */
+	public ListenerExecutionFailedException(String message, @Nullable String groupId, @Nullable Throwable cause) {
 		super(message, cause);
+		this.groupId = groupId;
+	}
+
+	/**
+	 * Return the consumer group.id property of the container that threw this exception.
+	 * @return the group id; may be null, but not when the exception is passed to an error
+	 * handler by a listener container.
+	 * @since 2.2.4
+	 */
+	@Nullable
+	public String getGroupId() {
+		return this.groupId;
 	}
 
 }
